# collective.sitter

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  buildout.cfg  pyproject.toml  setup.cfg  setup.py
docs/: HISTORY.txt  INSTALL.txt  LICENSE.txt  docu.md  github.css
src/collective/sitter/: __init__.py  configure.zcml  patches.py  setuphandlers.py  sitterstate.py  testing.py  upgrades.zcml  util.py  vocabularies.py
src/collective/sitter/browser/: actionhelpers.py  configure.zcml  controlpanel.py  faceted.py  layer.py  macros.py  postlogin.py  sitter.py  sitteraccount.py  sitterfolder.py  sittermanager.py  sitterstate.py
src/collective/sitter/browser/overrides/: eea.facetednavigation.views.preview-item.pt
src/collective/sitter/browser/static/: collective.sitter.css
src/collective/sitter/browser/templates/: checkcreator.pt  deletesitter.pt  searchsitterview.pt  signupview.pt  sitteraccount.pt  sittermacros.pt  sittermailview.pt  sittermanager.pt  sittertitle.pt  sitterview.pt  thankspage.pt
src/collective/sitter/content/: configure.zcml  facetednavigation.xml  sitter.py  sitterexperience.py  sitterfolder.py  sitterqualification.py  validator.py
src/collective/sitter/locales/: README.txt  collective.sitter.pot
src/collective/sitter/portlet/: configure.zcml  sitterportlet.pt  sitterportlet.py  sitterportlet_manager.pt
src/collective/sitter/tests/: __init__.py  test_catalog.py  test_checkcreator.py  test_deletesitter.py  test_functional.py  test_permissions.py  test_setup.py  test_sitter.py  test_sitter_state.py  test_sitteraccount.py
(+31 files in other folders)
